1521 UI Issue: Delete Confirmation Popup Appears in Wrong Color

--- a/src/app/shared/components/delete-module/delete-module.component.scss
+++ b/src/app/shared/components/delete-module/delete-module.component.scss
@@ -18,6 +18,7 @@
     .p-dialog {
       width: 25%;
       zoom: 70%;
+      background: var(--white-color-add);
     }
     button {
       width: 50%;
