--- a/src/styles.scss
+++ b/src/styles.scss
@@ -199,9 +199,6 @@ body {
   }
 }
 
-.p-dialog * {
-  width: 100%;
-}
 .p-dialog .p-dialog-close-button {
   float: right;
 }
